load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "clientset.go",
        "doc.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/client/clientset/versioned",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/client/clientset/versioned/typed/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/client/clientset/versioned/typed/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/client/clientset/versioned/typed/extendedsecret/v1alpha1:go_default_library",
        "//pkg/kube/client/clientset/versioned/typed/extendedstatefulset/v1alpha1:go_default_library",
        "@io_k8s_client_go//discovery:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//util/flowcontrol:go_default_library",
    ],
)
